# flume

./: .env.template  .gitignore  Cargo.toml  sqlx-data.json
migrations/: 20211108170325_init.sql
src/: broadcaster.rs  config.rs  http_api.rs  lib.rs  main.rs  queue.rs
src/queue/: aof.rs  in_memory.rs  sqlite.rs
tests/: queue.rs
