[package]
name = "flume"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
derivative = "2.2.0"
futures = "0.3.17"
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.51"
anyhow = "1.0.45"
log = "0.4.14"
femme = "2.1.1"
tide = "0.16.0"
serde = "1.0.130"
serde_json = "1.0.68"
patricia_tree = "0.3.1"
dotenv = "0.15.0"
sqlx = { version = "0.5.9", features = ["runtime-async-std-rustls", "sqlite", "offline"], optional = true }

[features]
sqlite = ["sqlx"]

[dev-dependencies]
rstest = "0.11.0"
rand = "0.8.4"
